<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:padding="16dp">

        <TextView
            android:id="@+id/changeEmail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/change_email"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/changeEmail_DescText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/please_enter_a_new_email_address_n_nthe_new_email_address_will_be_your_new_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeEmail_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changeEmail_newEmailTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:helperTextTextColor="@color/queryErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeEmail_DescText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changeEmail_emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_email_address"
                app:hintTextColor="#C5C7C2"
                android:fontFamily="@font/montserrat_semi_bold"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/for_security_please_verify_your_password_below"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeEmail_newEmailTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changeEmail_currentPasswordTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextColor="#C5C7C2"
            app:layout_constraintEnd_toEndOf="parent"
            app:helperTextTextColor="@color/queryErrorText"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changeEmail_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:fontFamily="@font/montserrat_semi_bold"
                android:imeOptions="actionNone"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/changeEmail_changeEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/sharper_corners"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/change_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/changeEmail_currentPasswordTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/changeEmail_currentPasswordTextLayout" />

        <Button
            android:id="@+id/changeEmail_CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/queryErrorText"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/changeEmail_changeEmailButton"
            app:layout_constraintEnd_toEndOf="@+id/changeEmail_currentPasswordTextLayout"
            app:layout_constraintTop_toTopOf="@+id/changeEmail_changeEmailButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>